<resources>
    <string name="app_name">BCS_Preparation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>


    <string name="menu_liveExam">Live Exam</string>
    <string name="menu_practice">Practice</string>
    <string name="menu_pdf">PDF</string>
    <string name="menu_Video">Video tutorials</string>
    <string name="menu_comments">Comments</string>
    <string name="menu_exits">Exits</string>
    <string name="menu_rate_us">Rate us</string>
    <string name="menu_share">Share</string>
    <string name="menu_help_center">Help center</string>
    <string name="menu_direction">Direction</string>
    <string name="menu_privacy_policy">Privacy policy</string>
    <string name="menu_communicate">Communicate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view">view</string>
    <string name="commentsname">CommentsName</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="not_now">Not now ?</string>


</resources>